website/app/client/stylesheets/main.scss
/*****************************************************************************/
/* main: Style */
/*****************************************************************************/
.main {
	margin: 2em 0 3em !important;
}

.innerMain {
	padding: 0;
	margin: 0 auto;
	width: 80%;
	max-width: 800px;
}

.master-main {
	flex: 1 0 auto;
}
h1 {
	text-align: center;
}

h3 {
	font-size:1.8em;
}

h4 {
	font-size:1.5em;
	margin:0;
}

p {
	word-break: break-word;
	white-space: pre-line;
	margin: 0 0 10px;
}

strong {
	font-weight:700;
}

.input-field {
	display:flex;
	input, textarea {
		font-size: 1em !important;
		&:focus, &.valid {
			border-bottom: 1px solid #2196F3 !important;
			box-shadow: 0 2px 0 -1px #2196F3!important;
			outline:none !important;
		}
		&.invalid {
			border-bottom: 1px solid #F44336 !important;
			box-shadow: 0 2px 0 -1px #F44336 !important;
		}
	}
	input {
		padding: 0 0.5em !important;
	}
	textarea {
		padding: 0.5em 0.5em 1em;
	}
	label {
		font-size:1em;
		width:100%;
		text-align: left;
		-webkit-transition:0.2s ease all;
		-moz-transition:0.2s ease all; 
		transition:0.2s ease all; 
		&:after {
			font-size:0.8em;
			margin-top:-35px;
		}
		&.active {
			font-size: 0.8em;
			color: #2196F3 !important;
			-webkit-transform: translateY(-110%);
			transform: translateY(-110%);
			&:after {
				font-size:inherit;
				margin-top:0;
			}
		}
	}
	.select-wrapper {
		width: 100%;
		display: flex;
	}
}
.range-field {
	white-space: inherit !important;
	input[type=range] {
		&:-moz-range-thumb, &:-ms-thumb {
			color:#fff !important;
			background-color:#fff !important;
		}
	}
	.thumb {
		background-color: #2196F3!important;
	}
}
.dropdown-content {
	li , span{
		color:#2196F3 !important;
	}
}

.btn, .btn-large {
	background-color:#2196F3;
	&:hover, &:focus {
		background-color:#2196F3;
	}
}

.btn-flat {
	padding: 0 0.5em;
	&:hover, &:focus {
		color:#2196F3;
		background-color: transparent;
	}
}

select {
	border: 1px solid #9e9e9e;
}

.modal {
	max-height:80%;
	max-width:600px;
	.modal-footer {
		padding:0 24px;
	}
	@media only screen and (max-width:600px) {
		top: 0 !important;
		width: 100%;
		height: 100%;
		max-height: inherit;
		.modal-content {
			padding: 2em 1.5em;
		}
	}
}
.row {
	margin:0;
}
.button-row {
	margin:0;
	text-align: right;
}

.spin {
	cursor: pointer;
	&:hover {
		-webkit-animation: spinAround 2s linear infinite;
		-moz-animation: spinAround 2s linear infinite;
		animation: spinAround 2s linear infinite;
	}
	@-webkit-keyframes spinAround {
		from { -webkit-transform: rotate(0deg) }
		to { -webkit-transform: rotate(360deg) }
	}
	@-moz-keyframes spinAround {
		from { -moz-transform: rotate(0deg) }
		to { -moz-transform: rotate(360deg) }
	}
	@keyframes spinAround {
		from { transform: rotate(0deg) }
		to { transform: rotate(360deg) }
	}
}

.card {
	.card-action {
		a, button {
			color: #2196F3 !important;
			letter-spacing:normal;
			&:hover {
				color:#90caf9 !important;
			}
		}
	}
}

.flex-container {
	display:flex;
	align-items: center;
	justify-content: space-between;
	.input-field {
		flex-grow: 1;
	}
	.left-item {
		padding-right: 0.5em;
	}
	.right-item {
		padding-left: 0.5em;
	}
	@media only screen and (max-width:600px) {
		h3 {
			margin-bottom:0.2em;
		}
		a, btn, button {
			width:100%;
		}
		.left-item, .right-item {
			padding: 0;
		}
		display:block;
	}
}

.course-input {
	text-transform:uppercase;
}

.collection {
	a {
		color: #2196F3 !important;
	}	
}

.add-file-form {
	.file-field {
		.file-path-wrapper {
			width:100%;
		}
	}
}
.switch {
	label {
		.lever {
			vertical-align: sub;
		}
		input[type=checkbox]:checked + .lever {
			background-color: #1565C0;
		}
		input[type=checkbox]:checked + .lever:after {
			background-color: #2196F3;
		}
	}
}
.active-blink {
	animation: active-blink 4s linear infinite;
}
@keyframes active-blink {  
	50% {opacity: 0.2;}
}

.chip {
	height:38px;
	line-height:38px;
	font-size:0.8em;
	img {
		height:38px;
		width:38px;
	}	
}

video {
	width: 100%;
	height: auto;
}

